Fix #112650: UI: Missing Header Status in Node Editor after Turning off Auto-offset

When auto-offset is OFF, garbage characters was displayed due to
uninitialized string.
To fix this, create an empty string and also display status that `auto
offset` is OFF